Fixed content window enabling, fixed image & iframe not showing/removing

--- a/CSS/content.scss
+++ b/CSS/content.scss
@@ -4,7 +4,7 @@
     padding: 0px;
     z-index: 2;
     width: 0%;
-    height: 100vh;
+    height: 96vh;
     right:0%;
 
     position: absolute;
